@@ -5,6 +5,7 @@ import static org.assertj.core.api.Assertions.assertThat;
 import ch.sbb.atlas.model.Status;
 import ch.sbb.atlas.model.controller.IntegrationTest;
 import ch.sbb.atlas.model.controller.WithAdminMockJwtAuthentication;
+import ch.sbb.atlas.servicepoint.enumeration.MeanOfTransport;
 import ch.sbb.line.directory.module.ttfn.entity.TimetableFieldLineRelation;
 import ch.sbb.line.directory.module.ttfn.entity.TimetableFieldNumberVersion;
 import java.time.LocalDate;
@@ -24,8 +25,7 @@ class TimetableFieldNumberVersionRepositoryTest {
   private TimetableFieldNumberVersion version;
 
   @Autowired
-  TimetableFieldNumberVersionRepositoryTest(
-      TimetableFieldNumberVersionRepository versionRepository) {
+  TimetableFieldNumberVersionRepositoryTest(TimetableFieldNumberVersionRepository versionRepository) {
     this.versionRepository = versionRepository;
   }
 
@@ -33,7 +33,9 @@ class TimetableFieldNumberVersionRepositoryTest {
   void setUpVersionWithTwoLineRelations() {
     version = TimetableFieldNumberVersion.builder()
         .ttfnid("ch:1:ttfnid:100000")
-        .description("FPFN Description")
+        .descriptionOutwardLine1("FPFN Description")
+        .descriptionReturnLine1("FPFN Description")
+        .meanOfTransport(MeanOfTransport.TRAIN)
         .number("BEX")
         .status(Status.VALIDATED)
         .swissTimetableFieldNumber("b0.BEX")
@@ -62,7 +64,7 @@ class TimetableFieldNumberVersionRepositoryTest {
     version.getLineRelations().clear();
 
     //when
-    TimetableFieldNumberVersion result = versionRepository.findAll().get(0);
+    TimetableFieldNumberVersion result = versionRepository.findAll().getFirst();
 
     //then
     assertThat(result).usingRecursiveComparison().ignoringActualNullFields().isEqualTo(version);
@@ -82,7 +84,7 @@ class TimetableFieldNumberVersionRepositoryTest {
     //given
 
     //when
-    TimetableFieldNumberVersion result = versionRepository.findAll().get(0);
+    TimetableFieldNumberVersion result = versionRepository.findAll().getFirst();
 
     //then
     assertThat(result).usingRecursiveComparison().ignoringActualNullFields().isEqualTo(version);
@@ -95,7 +97,7 @@ class TimetableFieldNumberVersionRepositoryTest {
 
     //when
     versionRepository.incrementVersion(version.getTtfnid());
-    TimetableFieldNumberVersion result = versionRepository.findAll().get(0);
+    TimetableFieldNumberVersion result = versionRepository.findAll().getFirst();
 
     //then
     assertThat(result.getVersion()).isEqualTo(1);
@@ -112,7 +114,7 @@ class TimetableFieldNumberVersionRepositoryTest {
     versionRepository.save(version);
 
     //when
-    TimetableFieldNumberVersion result = versionRepository.findAll().get(0);
+    TimetableFieldNumberVersion result = versionRepository.findAll().getFirst();
 
     //then
     assertThat(result.getLineRelations()).hasSize(3).extracting("id").isNotNull();
@@ -125,7 +127,7 @@ class TimetableFieldNumberVersionRepositoryTest {
     versionRepository.save(version);
 
     //when
-    TimetableFieldNumberVersion result = versionRepository.findAll().get(0);
+    TimetableFieldNumberVersion result = versionRepository.findAll().getFirst();
 
     //then
     assertThat(result.getLineRelations()).hasSize(1).extracting("id").isNotNull();
@@ -148,22 +150,16 @@ class TimetableFieldNumberVersionRepositoryTest {
     //given
     String ttfnid = "ch:1:ttfnid:100000";
     TimetableFieldNumberVersion secondVersion = TimetableFieldNumberVersion.builder()
-        .ttfnid(
-            "ch:1:ttfnid:100000")
-        .description(
-            "FPFN Description2")
+        .ttfnid("ch:1:ttfnid:100000")
+        .descriptionOutwardLine1("FPFN Description2")
+        .descriptionReturnLine1("FPFN Description2")
+        .meanOfTransport(MeanOfTransport.TRAIN)
         .number("BEX2")
         .status(Status.VALIDATED)
-        .swissTimetableFieldNumber(
-            "b0.BEX2")
-        .validFrom(
-            LocalDate.of(2021,
-                12, 12))
-        .validTo(
-            LocalDate.of(2021,
-                12, 12))
-        .businessOrganisation(
-            "sbb")
+        .swissTimetableFieldNumber("b0.BEX2")
+        .validFrom(LocalDate.of(2021, 12, 12))
+        .validTo(LocalDate.of(2021, 12, 12))
+        .businessOrganisation("sbb")
         .build();
     secondVersion.setLineRelations(new HashSet<>(
         Set.of(
@@ -177,8 +173,7 @@ class TimetableFieldNumberVersionRepositoryTest {
                 .build())));
     versionRepository.save(secondVersion);
 
-    List<TimetableFieldNumberVersion> allVersionsVersioned = versionRepository.getAllVersionsVersioned(
-        ttfnid);
+    List<TimetableFieldNumberVersion> allVersionsVersioned = versionRepository.getAllVersionsVersioned(ttfnid);
     assertThat(allVersionsVersioned).hasSize(2);
 
     //when
